tests/typechecker/fail/003-print.hyg
print(42.0f * false)
